# dup

./: .dockerignore  .gitignore  .sops.yaml  CLAUDE.md  Dockerfile  README.md  containers.py  docker-compose.yml  main.py  middleware.py  package.json  pyproject.toml  requirements.txt  test_create_approval.http  전자결재_구현계획.md  전자결재_납부요청_후속처리_설계기록.md  전자결재_법적효력_구현기록.md
.github/workflows/: bootstrap-sops-secret.yml  deploy.yml
application/: approval_favorite_group_service.py  approval_line_service.py  approval_notification_service.py  approval_service.py  base_service.py  cache_service.py  document_number_service.py  document_template_service.py  file_attachment_service.py  file_service.py  group_service.py  integrity_service.py  legal_archive_service.py  payment_task_notification_service.py  payment_task_service.py  redis_service.py  sync_service.py  user_service.py  voucher_service.py  websocket_manager.py  wiki_security.py  wiki_service.py
common/: auth.py  db.py  exceptions.py
domain/: approval_favorite_group.py  approval_history.py  approval_line.py  approval_request.py  attached_file.py  document_integrity.py  document_template.py  file.py  folder_read_state.py  group.py  payment_task.py  user.py  voucher.py  wiki.py
domain/repository/: IUserRepository.py  approval_favorite_group_repo.py  approval_history_repo.py  approval_line_repo.py  (+11 more)
styles/: input.css
templates/: index.html  lists.html  login.html  test.html  test2.html
tests/: test_wiki_security.py
utils/: crypto.py  logger.py  pdf.py  scheduler.py  settings.py  slack.py  time.py  whg.py
(+53 files in other folders)
