[project]
name = "dup"
version = "0.1.0"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "bcrypt==4.3.0",
    "beanie==1.29.0",
    "black==25.1.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "dependency-injector==4.46.0",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "fastapi==0.115.11",
    "h11==0.14.0",
    "idna==3.10",
    "Jinja2==3.1.6",
    "python-jose==3.4.0",
    "lazy-model==0.2.0",
    "MarkupSafe==3.0.2",
    "motor==3.7.0",
    "mypy-extensions==1.0.0",
    "packaging==24.2",
    "passlib==1.7.4",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "py-ulid==1.0.3",
    "pyasn1==0.4.8",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "pymongo==4.11.3",
    "python-jose==3.4.0",
    "python-multipart==0.0.20",
    "rsa==4.9",
    "setuptools==76.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.1",
    "toml==0.10.2",
    "typing_extensions==4.12.2",
    "uvicorn[fastapi,standard]==0.34.0",
    "wheel==0.45.1",
    "selenium>=4.31.0",
    "selenium-wire>=5.1.0",
    "blinker<1.7",
    "pydantic-settings>=2.9.1",
]
